objects/Contract_Tool__c.object
<CustomObject>
    <description>Related object to Contract, applicable for Tooling Contracts</description>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <referenceTo>IND_Contract__c</referenceTo>
        <relationshipLabel>Contract Tools</relationshipLabel>
        <relationshipName>Contract_Tools</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Tool_ID__c</fullName>
        <label>Customer Tool ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tool_Type_Text__c</fullName>
        <description>holds the text value of the tool type, as picklist not globally searchable</description>
        <label>Tool Type Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assembly Tool</fullName>
                </value>
                <value>
                    <fullName>Die Cast Tool</fullName>
                </value>
                <value>
                    <fullName>Molding Tool</fullName>
                </value>
                <value>
                    <fullName>Stamping Tool</fullName>
                </value>
                <value>
                    <fullName>Testing Tool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Tool</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TE Tool ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Tools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>